deployment2be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8demoecomm-appbe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8demoecommbe
  template:
    metadata:
      labels:
        app: k8demoecommbe
    spec:
      containers:
      - name: k8demoecommbe
        image: djtoler/dp9backend
        ports:
        - containerPort: 8000
