service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: kurak8demo-service-nodeport
spec:
  type: NodePort
  selector:
    app: k8demoecomm
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
