service2be.yaml
apiVersion: v1
kind: Service
metadata:
  name: kurak8demobe-service-nodeport
spec:
  type: NodePort
  selector:
    app: k8demoecommbe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
